--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -34,5 +34,7 @@
  * For more details, see https://docs.gradle.org/8.0.1/userguide/java_library_plugin.html#sec:java_library_configurations_graph
  */
 dependencies {
-    runtimeOnlyNonPublishable("com.github.GTNewHorizons:NotEnoughItems:2.5.4-GTNH:dev")
+    api("org.jetbrains:annotations:23.0.0")
+    devOnlyNonPublishable(rfg.deobf("curse.maven:smooth-font-285742:2614474"))
+    runtimeOnlyNonPublishable("com.github.GTNewHorizons:BetterQuesting:3.5.6-GTNH:dev")
 }
