--- a/gradle.properties
+++ b/gradle.properties
@@ -150,7 +150,7 @@ curseForgeRelations =
 
 # Optional parameter to customize the produced artifacts. Use this to preserve artifact naming when migrating older
 # projects. New projects should not use this parameter.
-# customArchiveBaseName =BetterLineBreak-1.7.10(Forge)
+customArchiveBaseName = BetterLineBreak-1.7.10(Forge)
 
 # Optional parameter to have the build automatically fail if an illegal version is used.
 # This can be useful if you e.g. only want to allow versions in the form of '1.1.xxx'.
