--- a/gradle.properties
+++ b/gradle.properties
@@ -13,6 +13,8 @@ modId = better_line_break
 # mcmod.info substitution, enabling assertions in run tasks, etc.
 modGroup = kpan.b_line_break
 
+modVersion = 1.0.0
+
 # Whether to use modGroup as the maven publishing group.
 # Due to a history of using JitPack, the default is com.github.GTNewHorizons for all mods.
 useModGroupForPublishing = false
