--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,7 +4,7 @@
 # against bad commits.
 
 name: build
-on: [pull_request, push]
+on: [ pull_request ]
 
 jobs:
   build:
@@ -16,7 +16,7 @@ jobs:
           21,    # Current Java LTS
         ]
         # and run on both Linux and Windows
-        os: [ubuntu-22.04, windows-2022]
+        os: [ ubuntu-22.04, windows-2022 ]
     runs-on: ${{ matrix.os }}
     steps:
       - name: checkout repository
